# Computer-Vision-Labs---Lab4

./: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp
